tests/ui/consts/required-consts/collect-in-dead-fn-behind-generic.opt.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/collect-in-dead-fn-behind-generic.rs:9:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation of `Fail::<i32>::C` failed here

note: erroneous constant encountered
  --> $DIR/collect-in-dead-fn-behind-generic.rs:15:17
   |
LL |         let _ = Fail::<T>::C;
   |                 ^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn not_called::<i32>`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
